Add activity to chat application

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".TweetActivity" />
-        <activity android:name=".EditTweetActivity"></activity>
+        <activity android:name=".EditTweetActivity" />
+        <activity android:name=".ChatActivity"></activity>
     </application>
 
 </manifest>
